--- a/content/research/_index.Rmd
+++ b/content/research/_index.Rmd
@@ -9,7 +9,7 @@ date: 2017-09-12T23:06:54+08:00
 Type.](https://arxiv.org/abs/1707.00349) _Submitted._
 * W. Ballinger, C. Hsu, W. Mackey, Y. Ni, T. Ochse, and F. Vafaee. [The Prism
 Manifold Realization Problem.](https://arxiv.org/abs/1612.04921)
-_Submitted._
+_To appear in Advances in Mathematics._
 
 <br>
 
