--- a/content/projects/retailgas.Rmd
+++ b/content/projects/retailgas.Rmd
@@ -2,9 +2,10 @@
 showonlyimage : false
 draft : false
 image : "img/projects/gas.jpg"
-date : "2017-08-30"
-title : "Retail Gas Price Prediction"
-description : "Predict weekly gas price trend to save money on gas. \n Compared
+date : "2017-09-12"
+title : "Predicting Retail Gas Price Trend"
+description : "How much money can we save if we are able to Predict weekly gas
+price trends? This project compared
 three models: 1) multivariate rolling regression, 2) ARIMA, and 3) logistic regression."
 type : "post"
 weight : 1
