--- a/content/about/_index.Rmd
+++ b/content/about/_index.Rmd
@@ -3,23 +3,20 @@ date: "2016-11-05T21:05:33+05:30"
 title: "About Me"
 ---
 
-<center>![](/img/self-portrait.png){ width=50% }</center>
+I am a fourth-year undergraduate student at Caltech studying math, computer science, and English.
 
-<br>
+Currently, I'm looking for a data scientist position.
 
 I have always been curious about this world, and I love explorative research. 
-
 I was trained to be a mathematician and computer scientist. 
 While I still enjoy thinking about abstract theory, I'm now more interested in
 applying research skills to model real-world problems.
-In the past year, I've picked up a lot of data analysis tools and techniques along the
+Recently, I've picked up a lot of data analysis tools and techniques along the
 way, and I'm excited to keep learning.
+
+In the past, I've worked as a quantitative analyst, math researcher, software engineer, and English-Chinese translator.
 
 When I'm not doing math, I spend time visiting art museums, painting watercolor,
 reading modernist fiction,
 cooking, and volunteering.
 
-It's hard to summerize my life on one page, but I tried to put together a
-timeline of what I've done since college academically.
-
-<center>![](/img/academic-highlights.png){ width=100% }</center>
