--- a/content/research/_index.Rmd
+++ b/content/research/_index.Rmd
@@ -3,13 +3,11 @@ title: "Research"
 date: 2017-09-12T23:06:54+08:00
 ---
 ### Publications
+* C. Hsu and C. Umans. [A Fast Generalized DFT for Finite Groups of Lie
+Type.](https://arxiv.org/abs/1707.00349) _SODA 2018._
 * C. Hsu and C. Umans. [On Multidimensional and Monotone k-SUM.](http://users.cms.caltech.edu/~umans/papers/HU17a) _MFCS 2017._
 [Slides](/pdf/mfcs_slides.pdf)
-* C. Hsu and C. Umans. [A Fast Generalized DFT for Finite Groups of Lie
-Type.](https://arxiv.org/abs/1707.00349) _Submitted._
-* W. Ballinger, C. Hsu, W. Mackey, Y. Ni, T. Ochse, and F. Vafaee. [The Prism
-Manifold Realization Problem.](https://arxiv.org/abs/1612.04921)
-_To appear in Advances in Mathematics._
+* W. Ballinger, C. Hsu, W. Mackey, Y. Ni, T. Ochse, and F. Vafaee. [The Prism Manifold Realization Problem.](https://arxiv.org/abs/1612.04921) _Submitted._
 
 <br>
 
